--- a/data/templates/single_template.html
+++ b/data/templates/single_template.html
@@ -1,1 +1,17 @@
-new template
+<!doctype html>
+<link rel="stylesheet" href="style.css">
+<div class=page>
+
+    <h1>Coverage report for sample: {{ sample }}</h1>
+
+    <h2>Regions with sub-optimal coverage</h2>
+
+    {{ sub_20x|safe }}
+
+    <br></br>
+
+    <h2>Per exon coverage for all genes</h2>
+    {{ stats_table|safe }}
+  
+
+</div>
