--- a/data/templates/single_template.html
+++ b/data/templates/single_template.html
@@ -14,18 +14,6 @@
             
             tr:hover {background-color:#ecebfc !important}
 
-            # .collapsible {
-            #     background-color: #777;
-            #     color: white;
-            #     cursor: pointer;
-            #     padding: 18px;
-            #     width: 100%;
-            #     border: none;
-            #     text-align: left;
-            #     outline: none;
-            #     font-size: 15px;
-            #     }
-
             .active, .collapsible:hover {
                 background-color: #555;
                 }
@@ -57,6 +45,7 @@
         <br></br>
         <h2>Summary</h2>
         <br>
+
         <p style="font-size:18px">
         The following report provides an assessment of coverage for the given sample.<br></br>
         It contains the following sections: <br></br>
@@ -68,18 +57,16 @@
         </ul>    
         <br>
         </p>
+
         <p style="font-size:18px">
 
-        Of the $total_genes genes included in the panel, 
-        $exon_isses exons in 
-        $gene_issues genes had sub optimal
-        coverage. To assess what portion of the exon(s) have sub-optimal coverage,
-        the plots display an interactive window on hovering, showing the coverage
-        at that current base.<br>
-
-        </p>
+        Of the $total_genes genes included in the panel, $exon_isses exons in 
+        $gene_issues genes had sub optimal coverage. To assess what portion of the exon(s) 
+        have sub-optimal coverage, the plots display an interactive window on hovering, 
+        showing the coverage at that current base.<br>
         <br></br>
-
+        </p>
+        
         <h2>Exons with sub-optimal coverage</h2>
         
         <table id=sub>
