Fixed plot spacing and size dependent on number of plots

--- a/data/templates/single_template.html
+++ b/data/templates/single_template.html
@@ -12,7 +12,7 @@
                 margin-right: auto
                 }
 
-            .cov-table {
+            /* .cov-table {
                 font-size: 111px;
                 width: 100%;
                 border: 10;
@@ -20,7 +20,7 @@
                 overflow: auto;
                 word-wrap:break-word;
                 border-collapse:collapse;
-                }
+                } */
             
 
             tr:hover {background-color:#ecebfc !important}
