Fixed colouring of low regions table to macth threshold value

--- a/data/templates/single_template.html
+++ b/data/templates/single_template.html
@@ -64,7 +64,7 @@
         The following report provides an assessment of coverage for the given sample.<br></br>
         It contains the following sections: <br></br>
         <ul>
-            <li> A table of exons with less than 100% coverage at $threshold x.</li><br>
+            <li> A table of exons with less than 100% coverage at $threshold .</li><br>
             <li> A series of interactive plots of exons with sub-optimal coverage.</li><br>
             <li> A summary table of coverage across all genes.</li><br>
             <li> A full table of per exon coverage across all genes.</li>
@@ -85,7 +85,7 @@
         <h2>Exons with sub-optimal coverage</h2>
         
         <table id=sub class="cov-table" width="100%">
-            $sub_20_stats
+            $sub_thrshld_stats
         </table>
 
         <br></br>
