--- a/data/templates/single_template.html
+++ b/data/templates/single_template.html
@@ -1,13 +1,21 @@
-<html>
+<!doctype html>
+<html lang="en">
     <head>
-        <link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/bootstrap/3.3.1/css/bootstrap.min.css">
-        <link rel="stylesheet" type="text/css" href="../data/static/DataTables/datatables.min.css"/>
         <meta name="viewport" content="width=device-width, initial-scale=1.0">
+
+        <!-- <link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/bootstrap/3.3.1/css/bootstrap.min.css"> -->
+        <link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/bootstrap/4.0.0/css/bootstrap.min.css" integrity="sha384-Gn5384xqQ1aoWXA+058RXPxPg6fy4IWvTNh0E263XmFcJlSAwiGgFAW/dAiS6JXm" crossorigin="anonymous">
+
+        <!-- local bootstrap -->
+        <!-- <link href="../../resources/mdb/css/bootstrap.min.css" rel="stylesheet"> -->
+        <!-- Material Design Bootstrap -->
+        <!-- <link href="/resources/mdb/css/mdb.min.css" rel="stylesheet"> -->
+
         <style>
             body{
-                margin-top: 100;
-                margin-bottom: 150;
-                width: 75%;
+                padding-top: 100;
+                padding-bottom: 150;
+                width: 85%;
                 margin-left: auto;
                 margin-right: auto
                 }
@@ -22,18 +30,17 @@
                 border-collapse:collapse;
                 } */
             
-
             tr:hover {background-color:#ecebfc !important}
 
             /* styling for collapsible sections */
 
             .active, .collapsible:hover {
-                background-color: #555;
+                background-color: rgb(255, 255, 255);
                 }
 
             .collapsible:after {
                 content: '+';
-                color: white;
+                color: rgb(255, 255, 255);
                 font-weight: bold;
                 float: right;
                 margin-left: 5px;
@@ -47,15 +54,21 @@
                 max-height: 0;
                 overflow: hidden;
                 transition: max-height 0.5s ease-out;
-                background-color: #f1f1f1;
-                }
+                /* background-color: #ffffff */
+                } 
+            .cov-table{
+                color:black
+            }
         </style>
     </head>
 
     <body>
-        <div class="well">
-        <h1>Coverage report for: $name </h1>
-        <br></br>
+        <div class="card border-light mt-5 mb-5 p-3 bg-light table-responsive">
+        <div class="card-header bg-info p-3 text-white">
+            <h2>Coverage report for: $name </h2>
+        </div><br>
+        <div class="card-body bg-white">
+        
         <h2>Summary</h2>
         <br>
         
@@ -69,29 +82,28 @@
             <li> A summary table of coverage across all genes.</li><br>
             <li> A full table of per exon coverage across all genes.</li>
         </ul>    
-        <br>
         </p>
 
         <p style="font-size:18px">
-
         Of the $total_genes genes included in the panel, $exon_issues exons in 
         $gene_issues genes had sub optimal coverage. To assess what portion of the exon(s) 
         have sub-optimal coverage, the plots display an interactive window on hovering, 
         showing the coverage at that current base.<br>
-        <br></br>
+        <br>
         </p>
         
         <!-- Low covered exons table and plots -->
         <h2>Exons with sub-optimal coverage</h2>
-        
+        <br>
         <table id=sub class="cov-table" width="100%">
             $sub_thrshld_stats
         </table>
 
         <br></br>
         $low_cov_plots
-        <br></br><br></br>
-
+        <br></br>
+        
+        <div class="gene">
         <!-- Per gene table and plots -->
         <h2> Per gene coverage summary </h2>
         
@@ -99,60 +111,59 @@
 
         The following section provides coverage metrics of each gene.<br>
         An expandable table contains metrics for each gene averaged across all of its exons.<br>
-        There is also an expandable section providing plots of each exon for each gene.<br>
+        There is also an expandable section providing plots of each exon for each gene.<br></br>
 
-        <button type="button" class="collapsible">Show / hide table</button>
-        <div class="content">
-            <table class="cov-table" width="100%">
+        <button type="button" class="btn btn-info btn-sm collapsible">Show / hide table</button>
+        <div class="content table-responsive">
+            <table class="table cov-table" width="100%">
                 $gene_stats
             </table>
         </div>
-        
         <br>
-
-        <button type="button" class="collapsible">Show / hide plots</button>
-        <div class="content">
+        <button class="btn btn-info btn-sm collapsible ">Show / hide plots</button>
+        <div class="content" width="100%">
             $all_plots   
         </div>
 
-
-        <br></br><br></br>
-
+    </div>
+        <br></br>
+    <div class="exons">
         <!-- Table of all exons in each gene -->
         <h2> Coverage for all regions of all genes </h2>
         <br>
         The following section provides coverage metrics for each exon of each gene.<br>
-        This is a very large table with full comprehensive coverage metrics of all target regions.<br>
+        This is a very large table with full comprehensive coverage metrics of all target regions.
 
         <br>
-        <button type="button" class="collapsible">Show / hide table</button>
+        <button class="btn btn-info btn-sm collapsible">Show / hide table</button>
         <div class="content">
             <table class="cov-table" width="100%">
                 $total_stats
             </table>
         </div>
-        
-        <!-- Optional section for displaying SNP information if generated -->
-        <div class="snps">
-            <h2> Coverage of SNPs </h2>
-            <br>
-            <button type="button" class="collapsible">Show / hide table</button>
-            <div class="content">
-                <table class="cov-table" width="100%">
-                    $snps_low_cov
-                </table>
-            </div>
-            </br>
-            
-            <br>
-            <button type="button" class="collapsible">Show / hide table</button>
-            <div class="content snps">
-                <table class="cov-table" width="100%">
-                    $snps_high_cov
-                </table>
-            </div>
-            </br>
+    </div>
+    <br>
+    <!-- Optional section for displaying SNP information if generated -->
+    <div class="snps">
+        <h2> Coverage of SNPs </h2>
+        <br>
+        <button class="btn btn-info collapsible btn-sm">Show / hide table</button>
+        <div class="content">
+            <table class="cov-table" width="100%">
+                $snps_low_cov
+            </table>
         </div>
+        </br>
+        
+        <br>
+        <button class="btn btn-info collapsible btn-sm">Show / hide table</button>
+        <div class="content snps">
+            <table class="cov-table" width="100%">
+                $snps_high_cov
+            </table>
+        </div>
+        </br>
+    </div>
     
     <!-- function to conditionally display SNPs div if SNPs option has been passed -->
     <script>
@@ -186,7 +197,8 @@
         });
         }
     </script>
-
+    </div>  
     </div>
+
     </body>
 </html>
