--- a/data/templates/single_template.html
+++ b/data/templates/single_template.html
@@ -3,8 +3,8 @@
     <head>
         <meta name="viewport" content="width=device-width, initial-scale=1.0">
 
-        <!-- <link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/bootstrap/3.3.1/css/bootstrap.min.css"> -->
         <link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/bootstrap/4.0.0/css/bootstrap.min.css" integrity="sha384-Gn5384xqQ1aoWXA+058RXPxPg6fy4IWvTNh0E263XmFcJlSAwiGgFAW/dAiS6JXm" crossorigin="anonymous">
+
 
         <!-- local bootstrap -->
         <!-- <link href="../../resources/mdb/css/bootstrap.min.css" rel="stylesheet"> -->
@@ -65,7 +65,7 @@
     <body>
         <div class="card border-light mt-5 mb-5 p-3 bg-light table-responsive">
         <div class="card-header bg-info p-3 text-white">
-            <h2>Coverage report for: $name </h2>
+            <h2>Coverage report for sample: $name </h2>
         </div><br>
         <div class="card-body bg-white">
         
@@ -95,9 +95,10 @@
         <!-- Low covered exons table and plots -->
         <h2>Exons with sub-optimal coverage</h2>
         <br>
-        <table id=sub class="cov-table" width="100%">
+        <table id=sub class="cov-table sortable" width="100%">
             $sub_thrshld_stats
         </table>
+
 
         <br></br>
         $low_cov_plots
@@ -133,10 +134,10 @@
         <br>
         The following section provides coverage metrics for each exon of each gene.<br>
         This is a very large table with full comprehensive coverage metrics of all target regions.
-
-        <br>
+        <br></br>
         <button class="btn btn-info btn-sm collapsible">Show / hide table</button>
         <div class="content">
+        <br>
             <table class="cov-table" width="100%">
                 $total_stats
             </table>
@@ -162,7 +163,11 @@
                 $snps_high_cov
             </table>
         </div>
-        </br>
+        </br></br>
+
+        <div class="card-footer bg-info p-1 text-white">
+            &nbsp&nbsp Report generated on $date
+        </div>
     </div>
     
     <!-- function to conditionally display SNPs div if SNPs option has been passed -->
@@ -197,6 +202,7 @@
         });
         }
     </script>
+
     </div>  
     </div>
 
