Add plot to template

--- a/data/templates/single_template.html
+++ b/data/templates/single_template.html
@@ -83,7 +83,11 @@
             <li> A full table of per exon coverage across all genes.</li>
         </ul>    
         </p>
-
+        
+        <br></br>
+        $summary_plot
+        <br></br>
+        
         <p style="font-size:18px">
         Of the $total_genes genes included in the panel, $exon_issues exons in 
         $gene_issues genes had sub optimal coverage. To assess what portion of the exon(s) 
