Added text to summary plot

--- a/data/templates/single_template.html
+++ b/data/templates/single_template.html
@@ -83,8 +83,10 @@
             <li> A full table of per exon coverage across all genes.</li>
         </ul>    
         </p>
-        
         <br></br>
+        The plot below gives a summary of gene level coverage. Of the $total_genes in the panel, $gene_issues genes 
+        had less than 100% coverage at the given threshold of $threshold . 
+
         $summary_plot
         <br></br>
         
