Added passing build number to report

--- a/data/templates/single_template.html
+++ b/data/templates/single_template.html
@@ -93,6 +93,8 @@
         
         <!--  Summary section -->
         <p style="font-size:18px">
+        Reference build used for aligment: <b>$build</b><br></br>
+
         The following report provides an assessment of coverage for the given sample.<br></br>
         It contains the following sections: <br></br>
         <ul>
