--- a/data/templates/single_template.html
+++ b/data/templates/single_template.html
@@ -4,7 +4,7 @@
         <meta name="viewport" content="width=device-width, initial-scale=1.0">
 
         <link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/bootstrap/4.0.0/css/bootstrap.min.css" integrity="sha384-Gn5384xqQ1aoWXA+058RXPxPg6fy4IWvTNh0E263XmFcJlSAwiGgFAW/dAiS6JXm" crossorigin="anonymous">
-
+        <!-- <link rel="stylesheet" type="text/css" href=""> -->
         <style>
             body{
                 padding-top: 100;
@@ -83,7 +83,9 @@
         
         <!--  Summary section -->
         <p style="font-size:18px">
-        Reference build used for aligment: <b>$build</b><br></br>
+        
+        <!-- Include reference build if given -->
+        $build
 
         The following report provides an assessment of coverage for the given sample.<br></br>
         It contains the following sections: <br></br>
