Adjust displaying build in template

--- a/data/templates/single_template.html
+++ b/data/templates/single_template.html
@@ -113,7 +113,7 @@
             <br>
         </p>
         <table id=sub class="table table-striped cov-table sortable" width="100%">
-            $sub_thrshld_stats
+            $sub_threshold_stats
         </table>
         <br></br>
         To assess what portion of the exon(s) have sub-optimal coverage, the plots below display 
