Added function to calculate total panel coverage, moved rounding of % to report script to improve calculated accuracy

--- a/data/templates/single_template.html
+++ b/data/templates/single_template.html
@@ -103,8 +103,9 @@
             <!-- Include reference build if given -->
             $build
             <li>Genes in the applied panel(s): <b>$total_genes</b></li>
-            <li>Total genes with 100% coverage at $threshold: <b>$fully_covered_genes ($pct_covered_genes %)</b></li>
-            <li>Total genes <b>not</b> 100% covered at $threshold: <b>$gene_issues ($pct_not_covered %)</b></li>
+            <li>Panel coverage at $threshold: <b>$panel_pct_coverage %</b></li>
+            <li>Total genes with 100% coverage at $threshold: <b>$fully_covered_genes</b></li>
+            <li>Total genes <b>not</b> 100% covered at $threshold: <b>$gene_issues</b></li>
             <!-- <li>Of the <b>$total_genes</b> genes in the panel, <b>$fully_covered_genes ($pct_covered_genes %)</b> genes had 100% coverage at $threshold.</li><br>
             <li><b>$gene_issues</b> genes had less than 100% coverage at $threshold .</li> -->
         </ul>
